[gd_scene load_steps=4 format=3 uid="uid://byiccrv2th3dk"]

[ext_resource type="Script" uid="uid://bqisu287r7kmf" path="res://scenees/pause_menu.gd" id="1_23l4v"]
[ext_resource type="Texture2D" uid="uid://bffbdnluytlwo" path="res://assets/game_background.png" id="1_fsflp"]
[ext_resource type="Theme" uid="uid://bwmoc62uymsn6" path="res://pause_menu_theme.tres" id="2_nlk7g"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_23l4v")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
offset_left = -188.0
offset_top = -543.0
offset_right = 1387.0
offset_bottom = 1032.0
texture = ExtResource("1_fsflp")
expand_mode = 1

[node name="resume_button" type="Button" parent="CanvasLayer"]
offset_left = 650.0
offset_top = 400.0
offset_right = 788.0
offset_bottom = 441.0
theme = ExtResource("2_nlk7g")
text = "Resume"

[node name="quit_button" type="Button" parent="CanvasLayer"]
offset_left = 100.0
offset_top = 400.0
offset_right = 189.0
offset_bottom = 441.0
theme = ExtResource("2_nlk7g")
text = "Quit"

[node name="restart_button" type="Button" parent="CanvasLayer"]
offset_left = 350.0
offset_top = 400.0
offset_right = 502.0
offset_bottom = 441.0
theme = ExtResource("2_nlk7g")
text = "Restart"

[node name="options_button" type="Button" parent="CanvasLayer"]
offset_left = 900.0
offset_top = 400.0
offset_right = 1052.0
offset_bottom = 441.0
theme = ExtResource("2_nlk7g")
text = "Options"

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
offset_left = 250.0
offset_top = 162.0
offset_right = 897.0
offset_bottom = 257.0
theme = ExtResource("2_nlk7g")
theme_override_font_sizes/normal_font_size = 100
text = "Game Paused"

[connection signal="button_down" from="CanvasLayer/resume_button" to="." method="_on_resume_button_button_down"]
[connection signal="pressed" from="CanvasLayer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/options_button" to="." method="_on_options_button_pressed"]
